[tool.poetry]
name = "video-downloader-bot"
version = "0.2.1"
description = "Telegram bot for downloading videos from social networks"
authors = ["Jag_k <jag-k@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.1"
aiohttp = "^3.8.3"
pytube = "^15.0.0"
python-dotenv = "^1.0.0"
pytz = "^2024.1"
aiofiles = "^23.1.0"
pydantic = "^1.10.15"
motor = "^3.1.2"
mongopersistence = "^0.3.0"
contextvars = "^2.4"

[tool.poetry.group.dev.dependencies]
babel = "*"
black = "*"
pre-commit = "*"
ruff = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 80
target-version = "py311"
exclude = ["*locales*"]

[tool.ruff.lint]
select = [
    "E", # pyflakes
    "F", # pycodestyle errors
    "W", # pycodestyle warnings
    "UP", # pyupgrade
    "I", # isort
    "C4", # flake8-comprehensions
    # pytest
    "PT018", # Assertion should be broken down into multiple parts
    "PT022", # No teardown in fixture {name}, use return instead of yield
]
ignore = ["E501"]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
known-first-party = [
    "app",
    "cli",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F405", "F811"]
"__main__.py" = ["E402", "F401", "F403", "F405", "F811"]
